styles/globals.css
@import 'fonts.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {

    img {
        height: auto !important;
        max-height: none !important;
    }

    .container-desktop-enlarged {
        @apply p-container laptop:max-w-container-desktop-enlarged laptop:p-container-desktop-enlarged laptop:m-container-desktop
    }

    .menu {
        transition: all 0.4s ease-in-out;
        max-height: calc(100vh - 60px);
        height: calc(100vh - 60px);
        @apply absolute w-full top-[calc(100%+1px)] z-10 overflow-y-auto bg-purple-dark container-desktop-enlarged pt-5 pb-7 laptop:flex laptop:justify-end laptop:items-center laptop:static laptop:inset-auto laptop:h-auto laptop:p-0;
    }

    .menu--closed {
        @apply left-full laptop:inset-auto;
    }

    .menu--opened {
        @apply left-0 laptop:inset-auto;
    }

    .burger-menu {
        @apply w-6 h-6 relative cursor-pointer duration-300;
    }

    .burger-menu__item {
        @apply absolute w-6 h-[3px] block bg-white duration-[400];
    }

    .burger-menu__item:nth-of-type(1) {
        transition: top 0.3s ease 0.3s,
            transform 0.3s ease-out 0.1s;
        @apply top-[1.5px];
    }

    .burger-menu__item:nth-of-type(2) {
        transition: ease 0.3s 0.3s;
        @apply top-[10.5px]
    }

    .burger-menu__item:nth-of-type(3) {
        transition: top 0.3s ease 0.3s,
            transform 0.3s ease-out 0.1s;
        @apply top-[19.5px]
    }

    .burger-menu.burger-menu--active .burger-menu__item:nth-of-type(1) {
        @apply top-[10.5px];
        transform: rotate(45deg);
        transition: top 0.3s ease 0.1s,
            transform 0.3s ease-out 0.5s;
    }

    .burger-menu.burger-menu--active .burger-menu__item:nth-of-type(2) {
        @apply opacity-0;
    }

    .burger-menu.burger-menu--active .burger-menu__item:nth-of-type(3) {
        @apply top-[10.5px];
        transform: rotate(-45deg);
        transition: top 0.3s ease 0.1s,
            transform 0.3s ease-out 0.5s;
    }

    .menu .menu__item {
        @apply opacity-0 laptop:opacity-100;
    }

    .menu--opened .menu__item {
        animation: menu-item-anim .6s forwards 0.4s ease-in-out;
    }

    @keyframes menu-item-anim {
        from {
            transform: translateY(30%);
            opacity: 0;
        }
        to {
            transform: translateY(0);
            opacity: 1;
        }
    }

    body::-webkit-scrollbar {
        @apply w-[5px];
    }

    body::-webkit-scrollbar-track {
        @apply bg-gray;
    }

    body::-webkit-scrollbar-thumb {
        @apply bg-purple-bright;
    }

    body::-webkit-scrollbar-thumb:hover {
        @apply bg-purple-bright-hover;
    }

    .loader {
        @apply relative !bg-purple !text-transparent;
    }

    .loader::after {
        content: '';
        display: inline-block;
        vertical-align: text-bottom;
        border: 1px solid currentColor;
        border-right-color: transparent;
        border-radius: 50%;
        color: #fff;
        position: absolute;
        width: 1rem;
        height: 1rem;
        left: calc(50% - .5rem);
        top: calc(50% - .5rem);
        animation: spinner-border .25s linear infinite;
    }

    @keyframes spinner-border {
        to {
            transform: rotate(360deg)
        }
    }

    .content h1 {
        @apply block w-full text-3xl my-3;
    }
    .content h2 {
        @apply block w-full text-2xl my-3.5;
    }
    .content h3 {
        @apply block w-full text-lg my-4;
    }
    .content h4 {
        @apply block w-full text-base my-5;
    }
    .content h5 {
        @apply block w-full text-sm my-6;
    }
    .content h6 {
        @apply block w-full text-xs my-7;
    }
    .content ul {
        @apply list-disc pl-4;
    }
    .content ol {
        @apply list-decimal pl-4;
    }
    .content ul li,
    .content ol li {
        @apply mb-3;
    }
    .content p {
        @apply mb-3;
    }
    .content a {
        @apply underline decoration-light-turquoise decoration-2 hover:decoration-3;
    }
    .content table {
        @apply w-full border-collapse border border-[rgba(255,255,255,0.3)] mb-3;
    }
    .content table th,
    .content table td {
        @apply border border-[rgba(255,255,255,0.3)] p-3;
    }
    .content img {
        border-radius: 16px;
    }
    .no-scrollbar {
        -ms-overflow-style: none;
        scrollbar-width: none;
    }
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }

    /* Skeleton Animation */
    .shining-base-element {
        background-size: 700px;
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 0px, rgba(255, 255, 255, 0.6) 40px, rgba(255, 255, 255, 0.5) 80px);
        animation: shine-base 2s infinite ease-out;
    }
    .shining-avatar-element {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 0px, rgba(255, 255, 255, 0.6) 40px, rgba(255, 255, 255, 0.5) 80px);
        background-size: 700px;
        animation: shine-avatar 2s infinite ease-out;
    }
    .shining-postavatar-element {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 0px, rgba(255, 255, 255, 0.6) 40px, rgba(255, 255, 255, 0.5) 80px);
        background-size: 700px;
        animation: shine-postavatar 2s infinite ease-out;
    }
    .shining-tag-element {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 0px, rgba(255, 255, 255, 0.6) 40px, rgba(255, 255, 255, 0.5) 80px);
        background-size: 700px;
        animation: shine-base 2s infinite ease-out;
    }
    .shining-tag-element:nth-of-type(2) {
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5) 0px, rgba(255, 255, 255, 0.6) 40px, rgba(255, 255, 255, 0.5) 80px);
        background-size: 700px;
        animation: shine-second-tag 2s infinite ease-out;
    }

    @keyframes shine-base {
        0% {
            background-position: -100px
        }
        40%, 100% {
            background-position: 500px;
        }
    }


    @keyframes shine-avatar {
        0% {
            background-position: calc( -100px + 44px);
        }
        40%, 100% {
            background-position: calc(500px + 44px);
        }
    }

    @keyframes shine-postavatar {
        0% {
            background-position: calc( -100px - 44px);
        }
        40%, 100% {
            background-position: calc(500px - 44px);
        }
    }

    @keyframes shine-second-tag {
        0% {
            background-position: calc( -100px - 70px);
        }
        40%, 100% {
            background-position: calc(500px - 70px);
        }
    }
}

